--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,21 +7,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Interactive Image Gallery</h2>
+  <h2>ART</h2>
 
   <!-- Main image display -->
   <div class="main-container">
-    <img id="mainImage" src="https://picsum.photos/id/1015/400/250" alt="Main Display">
+    <img id="mainImage" src="file:///C:/Users/David/Downloads/[604]%20avatar%20%F0%93%82%83%EA%99%B3%E2%8B%86.jpg" alt="yyz">
   </div>
 
   <!-- Thumbnails -->
   <div class="thumbnails">
-    <img src="https://picsum.photos/id/1015/400/250" alt="Mountain">
-    <img src="https://picsum.photos/id/1025/400/250" alt="Dog">
-    <img src="https://picsum.photos/id/1035/400/250" alt="Forest">
-    <img src="https://picsum.photos/id/1045/400/250" alt="City">
+    <img src="file:///C:/Users/David/OneDrive/Documents/Desktop/Exp4/img/download%20(6).jpg" alt="gen">
+    <img src="file:///C:/Users/David/OneDrive/Documents/Desktop/Exp4/img/Sport%20car%20wallpaper%20illustration%20images%20_%20Premium%20AI-generated%20image.jpg" alt="ezz">
+    <img src="file:///C:/Users/David/Downloads/you%20and%20i,%20in%20another%20universe_%20%F0%9F%A9%B6.jpg" alt="wze">
+    <img src="file:///C:/Users/David/Downloads/Mercedes%20x%20FENRIS.jpg" alt="nze">
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
